--- a/Bayes_Theorem_binary_outcomes.ipynb
+++ b/Bayes_Theorem_binary_outcomes.ipynb
@@ -38,8 +38,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "prob of Head on 1st toss 0.5009990009990011\n",
-      "prob of Head on 10th toss 0.7530894710825506\n"
+      "prob of Head on 2nd toss 0.5009990009990011\n",
+      "prob of Head on 11th toss 0.7530894710825506\n"
      ]
     }
    ],
@@ -66,30 +66,32 @@
     "    return pHD * posterior(likD, pD, likF, pF) + \\\n",
     "           pHF * posterior(likF, pF, likD, pD)\n",
     "\n",
-    "print('prob of Head on 1st toss', \n",
+    "print('prob of Head on 2nd toss', \n",
     "      head_n_plus_one(p_head_D, pD, p_head_F, pF, n=1))\n",
-    "print('prob of Head on 10th toss', \n",
+    "print('prob of Head on 11th toss', \n",
     "      head_n_plus_one(p_head_D, pD, p_head_F, pF, n=10))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# better yet, let's create a class \n",
     "\n",
-    "class BayesCoinFlip():\n",
+    "class BayesCoinToss():\n",
     "    \"\"\"Calculates the posteior probability of a coin given \n",
-    "    the followings:\n",
+    "    every toss returns a head, where:\n",
     "    - prior1, the prior probability \n",
     "    - prior2, the complement of prior1 (prior2 = 1 - prior1)\n",
     "    - prob_head1, the probability of obtaining a head given prior1 \n",
     "    - prob_head2, the probability of obtaining a head given prior2 \n",
     "    - number_of_flips, the number of coin flips\n",
     "    \n",
-    "    While prior 2 can be calculated from prior1, it is a good idea\n",
+    "    While prior2 can be calculated from prior1, it is a good idea\n",
     "    to have both specified for disambiguation of the likelihoods.\n",
     "    \"\"\"\n",
     "    def __init__(self, prior1, prob_head1, prior2,\n",
@@ -135,7 +137,7 @@
     "PROB_HEAD2 = .5\n",
     "N = 10\n",
     "\n",
-    "bayes = BayesCoinFlip(PRIOR1, PROB_HEAD1, PRIOR2, PROB_HEAD2, N)\n",
+    "bayes = BayesCoinToss(PRIOR1, PROB_HEAD1, PRIOR2, PROB_HEAD2, N)\n",
     "posterior = bayes.posterior()\n",
     "\n",
     "print('p(D), p(H|D), p(data|D):', \n",
@@ -183,8 +185,9 @@
     }
    ],
    "source": [
-    "# notice we can use BayesCoinFlip since we have \n",
-    "# a binary outcome (rain/no rain)\n",
+    "# notice we can use BayesCoinToss since we have \n",
+    "# a binary outcome (rain/no rain) and sequence of \n",
+    "# three rain outcomes\n",
     "\n",
     "PRIOR1 = 1/2\n",
     "PROB_HEAD1 = 2/3\n",
@@ -192,7 +195,7 @@
     "PROB_HEAD2 = 1/3\n",
     "N = 3\n",
     "\n",
-    "bayes = BayesCoinFlip(PRIOR1, PROB_HEAD1, PRIOR2, PROB_HEAD2, N)\n",
+    "bayes = BayesCoinToss(PRIOR1, PROB_HEAD1, PRIOR2, PROB_HEAD2, N)\n",
     "posterior = bayes.posterior()\n",
     "print(\"probability of rain given\", N, \"yes's =\", posterior)"
    ]
