generalized the class

--- a/Bayes_Theorem_binary_outcomes.ipynb
+++ b/Bayes_Theorem_binary_outcomes.ipynb
@@ -32,91 +32,61 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "prob of Head on 2nd toss 0.5009990009990011\n",
-      "prob of Head on 11th toss 0.7530894710825506\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Let's write some functions to get the answer.\n",
-    "\n",
-    "# prior that the coin is double-headed\n",
-    "pD = 1/1000\n",
-    "# probability of a head given double-headed coin\n",
-    "p_head_D = 1\n",
-    "# prior that the coin is fair\n",
-    "pF = 999/1000\n",
-    "# probability of a head given a fair coin\n",
-    "p_head_F = .5\n",
-    "\n",
-    "def lik(p_head, n):\n",
-    "    return p_head**n\n",
-    "\n",
-    "def posterior(likA, pA, likB, pB):\n",
-    "    return likA * pA/(likA * pA + likB*pB)\n",
-    "\n",
-    "def head_n_plus_one(pHD, pD, pHF, pF, n):\n",
-    "    likD, likF = lik(pHD, n), lik(pHF, n)\n",
-    "    return pHD * posterior(likD, pD, likF, pF) + \\\n",
-    "           pHF * posterior(likF, pF, likD, pD)\n",
-    "\n",
-    "print('prob of Head on 2nd toss', \n",
-    "      head_n_plus_one(p_head_D, pD, p_head_F, pF, n=1))\n",
-    "print('prob of Head on 11th toss', \n",
-    "      head_n_plus_one(p_head_D, pD, p_head_F, pF, n=10))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# better yet, let's create a class \n",
-    "\n",
-    "class BayesCoinToss():\n",
-    "    \"\"\"Calculates the posteior probability of a coin given \n",
-    "    every toss returns a head, where:\n",
-    "    - prior1, the prior probability \n",
-    "    - prior2, the complement of prior1 (prior2 = 1 - prior1)\n",
-    "    - prob_head1, the probability of obtaining a head given prior1 \n",
-    "    - prob_head2, the probability of obtaining a head given prior2 \n",
-    "    - number_of_flips, the number of coin flips\n",
+    "class BayesCoinToss:\n",
+    "    \"\"\"Obtains posterior probability of a coin.\"\"\"\n",
     "    \n",
-    "    While prior2 can be calculated from prior1, it is a good idea\n",
-    "    to have both specified for disambiguation of the likelihoods.\n",
-    "    \"\"\"\n",
-    "    def __init__(self, prior1, prob_head1, prior2,\n",
-    "                 prob_head2, number_of_flips):\n",
+    "    def __init__(self, prior1, prob_head1, prob_head2, n_heads, n_tails):\n",
+    "        \"\"\" prior1, prob_head1, and prob_head2 must be in [0, 1].\n",
+    "        n_heads and n_tails must be non-negative\"\"\"\n",
+    "        if prior1 < 0 or prior1 > 1:\n",
+    "            raise ValueError('The prior must be in [0, 1].')\n",
+    "        if (prob_head1 < 0 or prob_head1 > 1) or \\\n",
+    "           (prob_head2 < 0 or prob_head2 > 1):\n",
+    "            raise ValueError('prob(head) must be in [0, 1].')\n",
+    "        if type(n_heads) != int or type(n_tails) != int:\n",
+    "            raise TypeError('Number of heads or tails must be of type int.')\n",
+    "        if n_heads < 0 or n_tails < 0:\n",
+    "            raise ValueError('Number of heads or tails must be positive')\n",
     "        self.prior1 = prior1\n",
+    "        self.prior2 = 1 - prior1\n",
     "        self.prob_head1 = prob_head1\n",
-    "        self.prior2 = prior2\n",
     "        self.prob_head2 = prob_head2\n",
-    "        self.n_flips = number_of_flips\n",
-    "        # calculate the likelihoods (given each prior)\n",
-    "        self.likelihood1 = prob_head1**number_of_flips\n",
-    "        self.likelihood2 = prob_head2**number_of_flips\n",
+    "        self.n_heads = n_heads\n",
+    "        self.n_tails = n_tails\n",
+    "        \n",
+    "    def get_likelihood(self):\n",
+    "        self.likelihood1 = self.prob_head1**self.n_heads * \\\n",
+    "                           (1 - self.prob_head1)**self.n_tails\n",
+    "        self.likelihood2 = self.prob_head2**self.n_heads * \\\n",
+    "                           (1 - self.prob_head2)**self.n_tails\n",
+    "        return self.likelihood1, self.likelihood2\n",
     "    \n",
-    "    def posterior(self):\n",
-    "        \"\"\"Calculates the posterior probability of a head \n",
-    "        given the data and the priors\n",
-    "        \"\"\"\n",
-    "        denominator = self.prior1*self.likelihood1 + self.prior2*self.likelihood2\n",
-    "        self.posterior = self.prior1*self.likelihood1 / denominator\n",
-    "        return self.posterior\n"
+    "    def get_posterior(self):\n",
+    "        if hasattr(self, 'likelihood1'): \n",
+    "            term1 = self.likelihood1 * self.prior1\n",
+    "            term2 = self.likelihood2 * self.prior2\n",
+    "            self.posterior1 = term1 / (term1 + term2)\n",
+    "            return self.posterior1\n",
+    "        else:\n",
+    "            raise AttributeError('please calculate the likelihoods first!')\n",
+    "    \n",
+    "    def get_prob_head_next_toss(self):\n",
+    "        if hasattr(self, 'poststerior1'):\n",
+    "            prob_head_next_toss = self.prob_head1 * self.posterior1 + \\\n",
+    "                                  self.prob_head2 * (1 - self.posterior1)\n",
+    "            return prob_head_next_toss\n",
+    "        else:\n",
+    "            raise AttributeError('Please calculate the posterior first!')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -133,12 +103,15 @@
    "source": [
     "PRIOR1 = .001\n",
     "PROB_HEAD1 = 1\n",
-    "PRIOR2 = .999\n",
     "PROB_HEAD2 = .5\n",
-    "N = 10\n",
+    "N_HEADS = 10\n",
+    "N_TAILS = 0\n",
     "\n",
-    "bayes = BayesCoinToss(PRIOR1, PROB_HEAD1, PRIOR2, PROB_HEAD2, N)\n",
-    "posterior = bayes.posterior()\n",
+    "# BayesCoinToss(prior1, prob_head1, prob_head2, n_heads, n_tails)\n",
+    "bayes = BayesCoinToss(PRIOR1, PROB_HEAD1, PROB_HEAD2, \n",
+    "                      N_HEADS, N_TAILS)\n",
+    "L1, L2 = bayes.get_likelihood()\n",
+    "posterior = bayes.get_posterior()\n",
     "\n",
     "print('p(D), p(H|D), p(data|D):', \n",
     "      (bayes.prior1, bayes.prob_head1, bayes.likelihood1))\n",
@@ -147,6 +120,81 @@
     "print('p(D|data) =', posterior)\n",
     "prob_head_given_data = PROB_HEAD1 * posterior + PROB_HEAD2 * (1 - posterior)\n",
     "print('Probability of a head on next toss =', prob_head_given_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "When no data have been observed, the posterior is the prior!\n",
+      "p(D), p(H|D), p(data|D): (0.001, 1, 1)\n",
+      "p(F), p(H|F), p(data|F): (0.999, 0.5, 1.0)\n",
+      "p(D|data) = 0.001\n"
+     ]
+    }
+   ],
+   "source": [
+    "# test the function under no observations assumption\n",
+    "PRIOR1 = .001\n",
+    "PROB_HEAD1 = 1\n",
+    "PROB_HEAD2 = .5\n",
+    "N_HEADS = 0\n",
+    "N_TAILS = 0\n",
+    "\n",
+    "# BayesCoinToss(prior1, prob_head1, prob_head2, n_heads, n_tails)\n",
+    "bayes = BayesCoinToss(PRIOR1, PROB_HEAD1, PROB_HEAD2, \n",
+    "                      N_HEADS, N_TAILS)\n",
+    "L1, L2 = bayes.get_likelihood()\n",
+    "posterior = bayes.get_posterior()\n",
+    "print('When no data have been observed, the posterior is the prior!')\n",
+    "print('p(D), p(H|D), p(data|D):', \n",
+    "      (bayes.prior1, bayes.prob_head1, bayes.likelihood1))\n",
+    "print('p(F), p(H|F), p(data|F):',\n",
+    "      (bayes.prior2, bayes.prob_head2, bayes.likelihood2))\n",
+    "print('p(D|data) =', posterior)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "When both coins are fair and the priors are equal,\n",
+      "the posterior is 0.5\n",
+      "p(D), p(H|D), p(data|D): (0.5, 0.5, 0.5)\n",
+      "p(F), p(H|F), p(data|F): (0.5, 0.5, 0.5)\n",
+      "p(D|data) = 0.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# test the function under equal priors and two fair coins\n",
+    "PRIOR1 = .5\n",
+    "PROB_HEAD1 = .5\n",
+    "PROB_HEAD2 = .5\n",
+    "N_HEADS = 1\n",
+    "N_TAILS = 0\n",
+    "\n",
+    "# BayesCoinToss(prior1, prob_head1, prob_head2, n_heads, n_tails)\n",
+    "bayes = BayesCoinToss(PRIOR1, PROB_HEAD1, PROB_HEAD2, \n",
+    "                      N_HEADS, N_TAILS)\n",
+    "L1, L2 = bayes.get_likelihood()\n",
+    "posterior = bayes.get_posterior()\n",
+    "print('When both coins are fair and the priors are equal,\\nthe posterior is 0.5')\n",
+    "print('p(D), p(H|D), p(data|D):', \n",
+    "      (bayes.prior1, bayes.prob_head1, bayes.likelihood1))\n",
+    "print('p(F), p(H|F), p(data|F):',\n",
+    "      (bayes.prior2, bayes.prob_head2, bayes.likelihood2))\n",
+    "print('p(D|data) =', posterior)\n"
    ]
   },
   {
@@ -168,12 +216,14 @@
     "\n",
     "Suppose that rain/no rain is a 50-50 chance type of a scenario. Thus $p(\\text{rain}) = p(\\text{no rain}) = 0.5$. Thus,\n",
     "\n",
-    "$$p(\\text{rain}|~ yes, yes, yes) = \\frac{(8/27)(1/2)}{(8/27)(1/2) + (1/27)(1/2)} = \\frac{(8/27)}{(9/27)} = \\frac{8}{9} = 0.888\\dots$$"
+    "$$p(\\text{rain}|~ yes, yes, yes) = \\frac{(8/27)(1/2)}{(8/27)(1/2) + (1/27)(1/2)} = \\frac{(8/27)}{(9/27)} = \\frac{8}{9} = 0.888\\dots$$\n",
+    "\n",
+    "So given your friends' responses, you should bring an umbrella -- although it is not a bad idea to always bring one to Seattle."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -186,18 +236,19 @@
    ],
    "source": [
     "# notice we can use BayesCoinToss since we have \n",
-    "# a binary outcome (rain/no rain) and sequence of \n",
-    "# three rain outcomes\n",
+    "# a binary outcome (rain/no rain) \n",
     "\n",
     "PRIOR1 = 1/2\n",
     "PROB_HEAD1 = 2/3\n",
-    "PRIOR2 = 1/2\n",
     "PROB_HEAD2 = 1/3\n",
-    "N = 3\n",
+    "N_HEADS = 3\n",
+    "N_TAILS = 0\n",
     "\n",
-    "bayes = BayesCoinToss(PRIOR1, PROB_HEAD1, PRIOR2, PROB_HEAD2, N)\n",
-    "posterior = bayes.posterior()\n",
-    "print(\"probability of rain given\", N, \"yes's =\", posterior)"
+    "bayes = BayesCoinToss(PRIOR1, PROB_HEAD1, PROB_HEAD2, \n",
+    "                      N_HEADS, N_TAILS)\n",
+    "L1, L2 = bayes.get_likelihood()\n",
+    "posterior = bayes.get_posterior()\n",
+    "print(\"probability of rain given\", N_HEADS, \"yes's =\", posterior)"
    ]
   }
  ],
